--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx ts-node index.ts"
+    "account": "npx ts-node account-sas.ts",
+    "container": "npx ts-node container-sas.ts"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.12.0",
